# VideoSearch

./: .gitignore  LICENSE  README.md  pyproject.toml
experiments/notebook/: 01_full_feature_test.ipynb
src/video_search_tool/: __init__.py  assistant.py  chunking.py  cli.py  config.py  exceptions.py  media.py  models.py  nim.py  service.py  storage.py
tests/: test_assistant.py  test_chunking.py  test_service.py  test_storage.py
